<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/bottom_tab_bar_height"
    android:background="@drawable/base_layout_bg_with_boder"
    android:orientation="horizontal" >

    <LinearLayout
        android:onClick="TabOnClick"
        android:id="@+id/tab_layout1"
        style="@style/style_tab_sub_layout" >

        <ImageView
            android:id="@+id/tab_img1"
            style="@style/style_tab_img"
            android:src="@drawable/v5_tab_session_normal"
            android:contentDescription="@string/contentDescription" />

        <TextView
            android:id="@+id/tab_tv1"
            style="@style/style_tab_text"
            android:text="@string/tabhost_text_tag1" />
    </LinearLayout>

    <LinearLayout
        android:onClick="TabOnClick"
        android:id="@+id/tab_layout2"
        style="@style/style_tab_sub_layout" >

        <ImageView
            android:id="@+id/tab_img2"
            style="@style/style_tab_img"
            android:src="@drawable/v5_tab_contact_normal"
            android:contentDescription="@string/contentDescription" />

        <TextView
            android:id="@+id/tab_tv2"
            style="@style/style_tab_text"
            android:text="@string/tabhost_text_tag2" />
    </LinearLayout>

    <LinearLayout
        android:onClick="TabOnClick"
        android:id="@+id/tab_layout3"
        style="@style/style_tab_sub_layout" >

        <ImageView
            android:id="@+id/tab_img3"
			style="@style/style_tab_img"
            android:src="@drawable/v5_tab_mine_normal"
            android:contentDescription="@string/contentDescription" />

        <TextView
            android:id="@+id/tab_tv3"
            style="@style/style_tab_text"
            android:text="@string/tabhost_text_tag3" />
    </LinearLayout>

    <LinearLayout
        android:onClick="TabOnClick"
        android:id="@+id/tab_layout4"
        style="@style/style_tab_sub_layout" >

        <ImageView
            android:id="@+id/tab_img4"
			style="@style/style_tab_img"
            android:src="@drawable/v5_tab_mine_normal"
            android:contentDescription="@string/contentDescription" />

        <TextView
            android:id="@+id/tab_tv4"
            style="@style/style_tab_text"
            android:text="@string/tabhost_text_tag4" />
    </LinearLayout>

</LinearLayout>
