<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_tips_height"
    android:background="@drawable/header_tips_bg_selector"
    android:gravity="center_vertical"
    android:paddingTop="@dimen/header_tips_layout_padding_v"
    android:paddingBottom="@dimen/header_tips_layout_padding_v"
    android:orientation="horizontal" >
    
    <ImageView
        android:id="@+id/id_tips_iv_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/header_tips_height"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/ic_warning" />
    
    <TextView
        android:id="@+id/id_tips_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        android:textColor="@color/header_tips_text_color"
        android:textSize="@dimen/header_tips_text_size"
        android:text="@string/network_unconnect" />
    
    <Button
        android:id="@+id/id_tips_btn_right"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:maxWidth="50dp"
        android:background="@drawable/v5_btn_send_bg"
        android:onClick="closeHeaderTips"
        android:layout_height="@dimen/header_btn_height"
        android:layout_width="50dp"
        android:layout_marginLeft="@dimen/header_tips_layout_padding_h"
        android:layout_marginRight="@dimen/header_tips_layout_padding_h"
        android:layout_gravity="right|center_vertical" />

</LinearLayout>
