<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_material_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/material_grid_item_margin"
    android:background="@drawable/material_item_bg_selector"
    android:orientation="vertical" >
        
	<ImageView
        android:id="@+id/id_material_img"
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:minHeight="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/v5_img_src_loading"
        android:contentDescription="@string/contentDescription" />
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_material_img"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:orientation="horizontal" >
	    
        <TextView
            android:id="@+id/id_img_title_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:singleLine="true"
            android:text="@string/empty_string" />        
        
        
        <Button
            android:id="@+id/id_send_btn"
            android:layout_width="56dp"
            android:layout_height="30dp"
	        android:text="@string/robot_msg_send"
	        android:background="@drawable/v5_btn_chat_send_bg"
            android:textColor="@color/v5_btn_send_textcolor"
            android:textSize="12sp" />
        
    </LinearLayout>
        
</RelativeLayout>
