<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/chat_list_item_height"
    android:clickable="true"
    android:paddingTop="@dimen/chat_list_top_layout_horizontal_padding"
    android:paddingBottom="@dimen/chat_list_top_layout_horizontal_padding"
    android:paddingLeft="@dimen/chat_list_top_layout_horizontal_padding"
    android:paddingRight="@dimen/chat_list_item_horizontal_padding"
    android:paddingStart="@dimen/chat_list_top_layout_horizontal_padding"
    android:paddingEnd="@dimen/chat_list_item_horizontal_padding"
    android:background="@drawable/session_item_bg_selector">
    
    <RelativeLayout
        android:id="@+id/id_img_layout"
        android:layout_width="@dimen/chat_list_left_img_layout_height"
        android:layout_height="match_parent" >
        
        <com.v5kf.mcss.ui.widget.CircleImageView
	        android:id="@+id/id_item_photo"
	        android:layout_width="@dimen/chat_list_left_img_width"
	        android:layout_height="@dimen/chat_list_left_img_width"
	        android:layout_centerInParent="true"
	        android:contentDescription="@string/contentDescription"
	        android:src="@drawable/v5_photo_default" />
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/chat_list_top_layout_horizontal_padding"
        android:layout_marginBottom="@dimen/chat_list_top_layout_horizontal_padding"
        android:paddingRight="@dimen/chat_list_top_layout_horizontal_padding"
        android:paddingEnd="@dimen/chat_list_top_layout_horizontal_padding"
        android:paddingStart="@dimen/chat_list_top_layout_horizontal_padding"
        android:paddingLeft="@dimen/chat_list_top_layout_horizontal_padding"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
        	android:gravity="center_vertical"
            android:paddingBottom="@dimen/chat_list_top_layout_horizontal_padding" >
            
            <TextView
                android:id="@+id/id_item_date"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="12sp"
	            android:singleLine="true"
	            android:layout_alignParentEnd="true"	            
	            android:layout_alignParentRight="true"
	            android:textColor="#9FA0A0"
	            android:text="@string/chat_date_hint" />
            
            <TextView
                android:id="@+id/id_item_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="16sp"	            
	            android:singleLine="true"
	            android:layout_alignParentStart="true"
	            android:layout_alignParentLeft="true"
	            android:layout_toStartOf="@id/id_item_date"
	            android:layout_toLeftOf="@id/id_item_date"
	            android:layout_marginRight="@dimen/chat_list_top_layout_horizontal_padding"
	            android:layout_marginEnd="@dimen/chat_list_top_layout_horizontal_padding"
	            android:textColor="#000000"
	            android:text="@string/chat_title_hint" />
            
        </RelativeLayout>
        
        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="25dp"
           android:gravity="center_vertical"
	       android:orientation="horizontal" >
        
	        <com.v5kf.client.ui.emojicon.EmojiconTextView
	            android:id="@+id/id_item_content"
	            emojicon:emojiconSize="17sp"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginRight="@dimen/chat_list_top_layout_horizontal_padding"
	            android:layout_marginEnd="@dimen/chat_list_top_layout_horizontal_padding"
	            android:textSize="14sp"            
	            android:singleLine="true"
	            android:textColor="#787878"
				android:text="@string/chat_content_hint"/>
	        
	        <ImageView
	            android:id="@+id/id_item_iface_img"
				style="@style/IfaceImg"
				android:layout_marginRight="1dp"
				android:layout_gravity="end|center_vertical"
				android:src="@drawable/v5_iface_weixin"
				android:contentDescription="@string/contentDescription" />
	        
	        <TextView
	            android:id="@+id/id_item_iface_tv"
	            style="@style/Smile.TextView._Gray.Iface"
	            android:text="@string/iface_weixin" />
	        
        </LinearLayout>
        
	</LinearLayout>
	
        
</LinearLayout>